--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
+    "svgr": "svgr -d src/Icons/ assets/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@svgr/cli": "^5.4.0",
     "gh-pages": "^3.1.0"
   }
 }
