--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "framer-motion": "^2.9.4",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.11",
     "normalize.css": "^8.0.1",
