--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "framer-motion": "^2.9.4",
-    "node-sass": "^4.14.1",
     "nodemailer": "^6.4.11",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0"
   },
   "scripts": {
     "svgr": "svgr -d src/Icons/ assets/",
